--- a/scouting/old-yearly/2022/app/src/main/res/layout/fragment_rapid_react_dashboard_phone.xml
+++ b/scouting/old-yearly/2022/app/src/main/res/layout/fragment_rapid_react_dashboard_phone.xml
@@ -10,7 +10,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="0sp">
+        tools:layout_editor_absoluteX="-27dp"
+        tools:layout_editor_absoluteY="-234dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,7 +30,7 @@
                 android:textSize="42sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <View
                 android:id="@+id/divider"
@@ -650,14 +651,14 @@
                 android:id="@+id/leavesTarmac"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="280sp"
+                android:layout_marginTop="284dp"
                 android:buttonTint="@color/FEDS_WHITE"
                 android:contentDescription="ClosedQuestion leavesTarmac check"
                 android:fontFamily="@font/faxsansbeta"
-                android:text="@string/leaves_tarmac_title"
                 android:textColor="@color/FEDS_WHITE"
                 android:textSize="32sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.34"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/section_autonomous" />
 
@@ -665,14 +666,14 @@
                 android:id="@+id/humanScored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="12dp"
                 android:buttonTint="@color/FEDS_WHITE"
                 android:contentDescription="ClosedQuestion humanScored check"
                 android:fontFamily="@font/faxsansbeta"
-                android:text="@string/human_scored_title"
                 android:textColor="@color/FEDS_WHITE"
                 android:textSize="32sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.34"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/leavesTarmac" />
 
@@ -680,16 +681,60 @@
                 android:id="@+id/playedDefence"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="280sp"
+                android:layout_marginTop="280dp"
                 android:buttonTint="@color/FEDS_WHITE"
                 android:contentDescription="ClosedQuestion playedDefense check"
                 android:fontFamily="@font/faxsansbeta"
-                android:text="@string/played_defence_title"
                 android:textColor="@color/FEDS_WHITE"
                 android:textSize="32sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.347"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/divider4" />
+
+            <TextView
+                android:id="@+id/leavesTarmacTitle2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
+                android:layout_marginRight="80sp"
+                android:contentDescription="ClosedQuestion leavesTarmac text"
+                android:fontFamily="@font/faxsansbeta"
+                android:text="@string/leaves_tarmac_title"
+                android:textColor="@color/FEDS_WHITE"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.121"
+                app:layout_constraintStart_toEndOf="@+id/leavesTarmac"
+                app:layout_constraintTop_toBottomOf="@+id/tally4" />
+
+            <TextView
+                android:id="@+id/humanScoredText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="21dp"
+                android:layout_marginTop="22dp"
+                android:contentDescription="ClosedQuestion humanScored text"
+                android:fontFamily="@font/faxsansbeta"
+                android:text="@string/human_scored_title"
+                android:textColor="@color/FEDS_WHITE"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/humanScored"
+                app:layout_constraintTop_toBottomOf="@+id/leavesTarmacTitle2" />
+
+            <TextView
+                android:id="@+id/playedDefenseText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="14dp"
+                android:contentDescription="ClosedQuestion playedDefense text"
+                android:fontFamily="@font/faxsansbeta"
+                android:text="@string/played_defence_title"
+                android:textColor="@color/FEDS_WHITE"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/playedDefence"
+                app:layout_constraintTop_toBottomOf="@+id/tally8" />
 
             <SeekBar
                 android:id="@+id/seekBar"
@@ -767,9 +812,9 @@
                 android:id="@+id/start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
                 android:layout_marginRight="200sp"
                 android:backgroundTint="@color/FEDS_WHITE"
-                android:layout_marginTop="10sp"
                 android:fontFamily="@font/faxsansbeta"
                 android:text="Start"
                 android:textColor="@color/FEDS_BLACK"
@@ -781,10 +826,10 @@
                 android:id="@+id/stop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
                 android:layout_marginRight="0sp"
                 android:backgroundTint="@color/FEDS_WHITE"
                 android:fontFamily="@font/faxsansbeta"
-                android:layout_marginTop="10sp"
                 android:text="Stop"
                 android:textColor="@color/FEDS_BLACK"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -796,9 +841,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="200sp"
+                android:layout_marginTop="10sp"
                 android:backgroundTint="@color/FEDS_WHITE"
                 android:fontFamily="@font/faxsansbeta"
-                android:layout_marginTop="10sp"
                 android:text="Reset"
                 android:textColor="@color/FEDS_BLACK"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -817,63 +862,65 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:layout_editor_absoluteX="13dp">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="500sp"
+                    android:layout_height="150sp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/dashboard_static"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/title_dashboard"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/faxsansbeta"
+                    android:text="@string/dashboard_title"
+                    android:textAlignment="center"
+                    android:textColor="@color/FEDS_WHITE"
+                    android:textSize="54sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/heading_dashboard_teamColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="180sp"
+                    android:layout_marginTop="-40sp"
+                    android:fontFamily="@font/faxsansbeta"
+                    android:text="@string/dashboard_color"
+                    android:textColor="@color/FEDS_WHITE"
+                    android:textSize="32sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/title_dashboard" />
+
+                <TextView
+                    android:id="@+id/heading_dashboard_teamNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="-40sp"
+                    android:layout_marginRight="180sp"
+                    android:fontFamily="@font/faxsansbeta"
+                    android:text="@string/dashboard_teamNum"
+                    android:textColor="@color/FEDS_WHITE"
+                    android:textSize="32sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/title_dashboard" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="500sp"
-            android:layout_height="150sp"
-            android:adjustViewBounds="true"
-            android:src="@drawable/dashboard_static"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/title_dashboard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/faxsansbeta"
-            android:text="@string/dashboard_title"
-            android:textAlignment="center"
-            android:textColor="@color/FEDS_WHITE"
-            android:textSize="54sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/heading_dashboard_teamColor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/faxsansbeta"
-            android:text="@string/dashboard_color"
-            android:textColor="@color/FEDS_WHITE"
-            android:textSize="32sp"
-            android:layout_marginTop="-40sp"
-            android:layout_marginLeft="180sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_dashboard" />
-
-        <TextView
-            android:id="@+id/heading_dashboard_teamNum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/faxsansbeta"
-            android:text="@string/dashboard_teamNum"
-            android:textColor="@color/FEDS_WHITE"
-            android:textSize="32sp"
-            android:layout_marginTop="-40sp"
-            android:layout_marginRight="180sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_dashboard" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
