A very broken code

--- a/scouting/old-yearly/2022/app/src/main/res/layout/fragment_rapid_react_dashboard.xml
+++ b/scouting/old-yearly/2022/app/src/main/res/layout/fragment_rapid_react_dashboard.xml
@@ -669,6 +669,7 @@
                 android:fontFamily="@font/faxsansbeta"
                 android:text="@string/leaves_tarmac_title"
                 android:textColor="@color/FEDS_WHITE"
+                android:contentDescription="ClosedQuestion leavesTarmac text"
                 android:textSize="50sp"
                 android:layout_marginRight="80sp"
                 android:layout_marginTop="55sp"
@@ -696,6 +697,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/faxsansbeta"
                 android:text="@string/human_scored_title"
+                android:contentDescription="ClosedQuestion humanScored text"
                 android:textColor="@color/FEDS_WHITE"
                 android:textSize="50sp"
                 android:layout_marginRight="80sp"
@@ -726,6 +728,7 @@
                 android:layout_marginRight="80sp"
                 android:fontFamily="@font/faxsansbeta"
                 android:text="@string/played_defence_title"
+                android:contentDescription="ClosedQuestion playedDefense text"
                 android:textColor="@color/FEDS_WHITE"
                 android:textSize="50sp"
                 app:layout_constraintEnd_toEndOf="parent"
