--- a/scouting/old-yearly/2022/app/src/main/res/layout/fragment_home.xml
+++ b/scouting/old-yearly/2022/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
+    android:theme="@style/Theme.Fragment"
     tools:context=".Home">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,17 +31,9 @@
                 android:id="@+id/rvQuals"
                 android:layout_marginTop="-3dp"
                 android:layout_width="match_parent"
-                android:layout_height="815sp"
+                android:layout_height="800sp"
                 app:layout_constraintTop_toBottomOf="@+id/upcoming_matches" />
 
-            <Button
-                android:id="@+id/buttonofgreatness"
-                android:layout_width="50sp"
-                android:layout_height="50sp"
-                android:layout_marginTop="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/upcoming_matches"
-                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
