--- a/scouting/old-yearly/2022/app/src/main/res/values-night/themes.xml
+++ b/scouting/old-yearly/2022/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="Theme.Fragment" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.Phone" parent="Theme.MaterialComponents.DayNight">
         <item name="android:statusBarColor">#778DA9</item>
         <item name="android:navigationBarColor">#000000</item>
         <item name="colorControlNormal">@color/FEDS_WHITE</item>
@@ -11,6 +11,24 @@
         <item name="iconTint">@color/FEDS_WHITE</item>
         <item name="homeAsUpIndicator">@color/FEDS_WHITE</item>
         <item name="actionBarTheme">@style/ActionBar.theme</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:textColor">@color/FEDS_BLACK</item>
+    </style>
+
+    <style name="Theme.Tablet" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:statusBarColor">#778DA9</item>
+        <item name="android:navigationBarColor">#000000</item>
+        <item name="colorControlNormal">@color/FEDS_WHITE</item>
+        <item name="colorControlActivated">@color/FEDS_WHITE</item>
+        <item name="actionBarStyle">@style/actionbar_tablet</item>
+        <item name="colorPrimary">@color/FEDS_WHITE</item>
+        <item name="actionMenuTextColor">@color/FEDS_WHITE</item>
+        <item name="itemIconTint">@color/FEDS_WHITE</item>
+        <item name="iconTint">@color/FEDS_WHITE</item>
+        <item name="homeAsUpIndicator">@color/FEDS_WHITE</item>
+        <item name="actionBarTheme">@style/ActionBar.theme</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:textColor">@color/FEDS_BLACK</item>
     </style>
 
     <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
