--- a/scouting/old-yearly/2023/app/src/main/res/values/colors.xml
+++ b/scouting/old-yearly/2023/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="FEDS_BLACK">#000000</color>
     <color name="FEDS_WHITE">#FFFFFF</color>
+    <color name="TRANSPARENT">#00000000</color>
 </resources>
