--- a/scouting/old-yearly/2023/app/src/main/res/layout/fragment_input.xml
+++ b/scouting/old-yearly/2023/app/src/main/res/layout/fragment_input.xml
@@ -1125,7 +1125,7 @@
                 android:layout_width="60sp"
                 android:layout_height="60sp"
                 android:layout_marginTop="142sp"
-                android:layout_marginEnd="430sp"
+                android:layout_marginEnd="530sp"
                 android:backgroundTint="@color/FEDS_WHITE"
                 android:text="@string/minus"
                 android:textAlignment="gravity"
@@ -1139,7 +1139,7 @@
                 android:id="@+id/endgame_tally"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="410sp"
+                android:layout_marginEnd="510sp"
                 android:fontFamily="@font/faxsansbeta"
                 android:text="@string/zero"
                 android:textColor="@color/FEDS_WHITE"
@@ -1152,7 +1152,7 @@
                 android:id="@+id/endgame_button_plus"
                 android:layout_width="60sp"
                 android:layout_height="60sp"
-                android:layout_marginEnd="350sp"
+                android:layout_marginEnd="450sp"
                 android:backgroundTint="@color/FEDS_WHITE"
                 android:text="@string/plus"
                 android:textAlignment="gravity"
@@ -1171,7 +1171,7 @@
                 android:textColor="@color/FEDS_WHITE"
                 android:fontFamily="@font/faxsansbeta"
                 android:textSize="40sp"
-                android:layout_marginEnd="180sp"
+                android:layout_marginEnd="380sp"
                 android:text="Links?"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -1184,6 +1184,33 @@
                 android:layout_marginTop="220sp"
                 android:text="Finish"
                 android:textColor="@color/FEDS_BLACK"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <CheckBox
+                android:id="@+id/endgame_parked"
+                android:layout_width="90sp"
+                android:layout_height="90sp"
+                android:layout_marginStart="200sp"
+                android:layout_marginTop="128sp"
+                android:background="?android:attr/listChoiceIndicatorMultiple"
+                android:backgroundTint="@color/FEDS_WHITE"
+                android:button="@null"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/endgame_parkedtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="430sp"
+                android:layout_marginTop="150sp"
+                android:fontFamily="@font/faxsansbeta"
+                android:text="Parked?"
+                android:textColor="@color/FEDS_WHITE"
+                android:textSize="40sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
