--- a/scouting/old-yearly/2023/app/src/main/res/layout/fragment_setup_tablet.xml
+++ b/scouting/old-yearly/2023/app/src/main/res/layout/fragment_setup_tablet.xml
@@ -21,14 +21,15 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_marginTop="50sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/faxsansbeta"
-        android:textSize="40sp"
-        android:textColor="@color/FEDS_BLACK"
         android:text="Enter Comp Code:"
+        android:textColor="@color/FEDS_BLACK"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -36,11 +37,11 @@
         android:id="@+id/compcodeinput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
-        android:textSize="25sp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="@color/FEDS_BLACK"
         android:ems="12"
         android:inputType="textPersonName"
-        android:backgroundTint="@color/FEDS_BLACK"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -49,12 +50,13 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50sp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/faxsansbeta"
         android:text="TBH Auth Code:"
         android:textColor="@color/FEDS_BLACK"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compcodeinput" />
 
@@ -74,26 +76,28 @@
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#778DA9"
         android:fontFamily="@font/faxsansbeta"
         android:text="Submit"
-        android:backgroundTint="#778DA9"
         android:textColor="@color/FEDS_WHITE"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alliancecolor" />
+        app:layout_constraintTop_toBottomOf="@+id/alliancecolor"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50sp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/faxsansbeta"
         android:text="Alliance Color #"
         android:textColor="@color/FEDS_BLACK"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbhauthcode" />
 
